# backend-fastapi-sensors

./: .db.env.sample  .dockerignore  .env.sample  .gitignore  README.md  docker-compose.yaml  fly.toml  pyproject.toml
alembic/: env.py
alembic/versions/: 848a03e415e3_add_name_column_to_users_table_and_made_.py  8856c469e8aa_initial_migration.py  9c3f78c4e213_add_user_company_table_and_update_.py  a67691c06415_add_user_company_table_and_update_.py  d082fb37354b_add_admin_user_id_to_companies.py
app/: app.py  main.py
app/core/: auth.py  config.py  security.py
app/models/: company.py  equipment.py  sensor_data.py  user.py
app/routers/: auth.py  companies.py  equipment.py  sensor_data.py
app/schemas/: __init__.py  company.py  equipment.py  sensor_data.py  token.py  user.py
docker/: Dockerfile  sample_sensor_data_user_id-1.csv  seed.sql
tests/: conftest.py  factories.py  test_app.py  test_auth.py  test_companies.py  test_equipment.py
