[tool.poetry]
name = "backend-fastapi-sensors"
version = "0.1.0"
description = ""
authors = ["Johan Guse <johanguse@gmail.com>"]

[tool.poetry.dependencies]
python = "3.11.*"
charset-normalizer = "^3.1.0"  # Needed cause of a bug in poetry
urllib3 = "^2.0"  # Needed cause of a bug in poetry
fastapi = "^0.112.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
